Initial commit of version upgrade; Java 21 and Spring 3.2.3. 3/109 tests failing with error due to jakarta deserialization